2006 Nov 30:
* Added support for ND2/JPEG-2000
* Added support for MRC
* Added support for MNG
* Improved support for floating-point images
* Fixed problem with 2-channel Leica LIF data 
* Minor tweaks and bugfixes in many readers
* Improved file stitching logic
* Allow ImageJ plugin to be called from a macro

2006 Nov 2:
* Bugfixes and improvements for Leica LIF, Zeiss LSM, OIF and OIB
* Colorize channels when they are split into separate windows
* Fixed a bug with 4-channel datasets

2006 Oct 31:
* Added support for Imaris 5 files
* Added support for RGB ICS images

2006 Oct 30:
* Added support for tiled TIFFs
* Fixed bugs in ICS reader
* Fixed importer plugin deadlock on some systems

2006 Oct 27:
* Multi-series support for Slidebook
* Added support for Alicona AL3D
* Fixed plane ordering issue with FV1000 OIB
* Enhanced dimension detection in FV1000 OIF
* Added preliminary support for reading NEF images
* Added option to ignore color tables
* Fixed ImageJ GUI problems
* Fixed spatial calibration problem in ImageJ
* Fixed some lingering bugs in Zeiss ZVI support
* Fixed bugs in OME-XML reader
* Tweaked ICS floating-point logic
* Fixed memory leaks in all readers
* Better file stitching logic

2006 Oct 6:
* Support for 3i SlideBook format (single series only for now)
* Support for 16-bit RGB palette TIFF
* Fixed bug preventing import of certain Metamorph STK files
* Fixed some bugs in PerkinElmer UltraView support
* Fixed some bugs in Leica LEI support
* Fixed a bug in Zeiss ZVI support
* Fixed bugs in Zeiss LSM support
* Fixed a bug causing slow identification of Leica datasets
* Fixed bugs in the channel merging logic
* Fixed memory leak for OIB format
* Better scaling of 48-bit RGB data to 24-bit RGB
* Fixed duplicate channels bug in "open each channel in a separate window"
* Fixed a bug preventing PICT import into ImageJ
* Better integration with HandleExtraFileTypes
* Better virtual stack support in Data Browser plugin