@@ -178,6 +178,13 @@ public class ICSReader extends FormatReader {
       bytes, littleEndian);
   }
 
+  /* @see IFormatReader#getUsedFiles(String) */
+  public String[] getUsedFiles(String id) throws FormatException, IOException {
+    if (!id.equals(currentId)) initFile(id);
+    if (versionTwo) return new String[] {getMappedId(currentIdsId)};
+    return new String[] {getMappedId(currentIdsId), getMappedId(currentIcsId)};
+  }
+
   /** Closes any open files. */
   public void close() throws FormatException, IOException {
     if (idsIn != null) idsIn.close();
